# asr-pipeline

./: .env.example  .gitignore  README.md  justfile  pyproject.toml
presentation/: asr_pipeline_presentation.tex
scripts/: README_lora_remote.md  _score_omni_pilot.py  audio_quality_report.py  build_lora_dataset_remote.py  check_qwen_asr_bengali.py  compare_lora_chain_strategies.py  compare_lora_vs_baseline.py  eval_omni_fleurs10.py  eval_real_survey.py  extract_ipa_local.py  fetch_fleurs_demo.py  mic_test_extra_files.py  mic_test_per_folder_report.py  mic_test_per_speaker.py  run_lora_pipeline.sh  split_ipa_dataset.py  test_banglallama_zeroshot.py  test_llm_arbiter.py  test_lora_local.py  test_lora_translation.py  test_phys_lattice_recall.py  train_lora_ipa_local.py  train_lora_remote.py
src/asr_pipeline/: __init__.py  __main__.py  alignment.py  batch.py  benchmark.py  cli.py  config.py  default.yaml  diarization.py  finetune.py  forced_aligner.py  formatter.py  language.py  logging_config.py  mic_test.py  models.py  nemo_diarization.py  pipeline.py  postprocessor.py  preprocessor.py
src/asr_pipeline/engines/: __init__.py  omnilingual_engine.py  qwen_engine.py  whisper_engine.py
tests/: test_pipeline.py
