[project]
name = "asr-pipeline"
version = "0.1.0"
description = "Production-ready multilingual ASR pipeline with speaker diarization, LLM post-processing, and translation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "ASR Pipeline Team" }]

dependencies = [
    # Audio processing
    "ffmpeg-python>=0.2.0",
    "torchaudio>=2.0.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "noisereduce>=0.1.2",
    "silero-vad>=5.0",
    # ASR engines
    "faster-whisper>=1.0.0",
    "omnilingual-asr>=0.1.0",
    "qwen-asr>=0.0.6",
    # Speaker diarization
    # Pinned to 3.x — pyannote 4.0 requires numpy>=2.0 which conflicts
    # with fairseq2 (omnilingual-asr dependency, needs numpy<2.0).
    # Upgrade when fairseq2 adds numpy 2.0 support.
    "pyannote.audio>=3.1.0,<4.0.0",
    # Translation
    "transformers>=4.36.0",
    "sentencepiece>=0.1.99",
    "ctranslate2>=4.0.0",
    # Neural P2G fine-tuning (LoRA adapters, 3-5x faster training)
    "peft>=0.10.0",
    # LLM post-processing
    "ollama>=0.4.0",
    # Configuration & CLI
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    # Utilities
    "torch>=2.0.0",
    "python-dotenv>=1.0.0",
    "bitsandbytes>=0.49.2",
    "accelerate>=1.12.0",
    "openpyxl>=3.1.5",
    "epitran>=1.35.1",
    "phonemizer>=3.3.0",
    "onnxruntime>=1.24.1",
    "librosa>=0.11.0",
    "lhotse>=1.31.1",
    "huggingface-hub>=0.36.2",
    "speechbrain>=1.0.3",
    "datasets[audio]>=3.0,<4.0",
    "nvidia-cudnn-cu12>=9.10.2.21",
    "pyctcdecode>=0.5.0",
    "flashlight-text>=0.0.7",
    "kenlm>=0.3.0",
    "wikiextractor>=3.0.6",
    "symspellpy>=6.9.0",
    "jieba>=0.42.1",
    "llama-cli>=1.0.18",
    "unsloth>=2026.5.2",
    "qwen-asr>=0.0.6",
]

[project.optional-dependencies]
nemo = [
    # NeMo MSDD diarization backend (optional, install with: pip install -e ".[nemo]")
    "nemo_toolkit[asr]>=2.0.0",
    # Pin onnx <1.19 — onnx 1.19+ requires ml_dtypes>=0.5.0 which needs
    # numpy>=2.1 on Python 3.13+, conflicting with fairseq2's numpy<2.0.
    # onnx 1.18.x works fine with ml_dtypes 0.4.x (numpy<2 compatible).
    "onnx<1.19.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
asr-pipeline = "asr_pipeline.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/asr_pipeline"]

[tool.hatch.build.targets.wheel.force-include]
"src/asr_pipeline/default.yaml" = "asr_pipeline/default.yaml"

[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cpu", marker = "platform_machine != 'x86_64' and sys_platform != 'darwin'" },
  { index = "pytorch", marker = "platform_machine == 'x86_64' and sys_platform != 'darwin'" },
]
torchaudio = [
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cpu", marker = "platform_machine != 'x86_64' and sys_platform != 'darwin'" },
  { index = "pytorch", marker = "platform_machine == 'x86_64' and sys_platform != 'darwin'" },
]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
